# gz_sim_spray_painting_plugin

./: .gitignore  Dockerfile  LICENSE.txt  README.md  SPEC.md  startScript.sh
docker/: docker-compose.yml
run_scripts/: build_code.py  container_tmux_setup.sh  run_docker.sh  run_stack.py
run_scripts/docker/: run_docker.sh
src/gz_sim_spray_painting_plugin/: CMakeLists.txt  package.xml
src/gz_sim_spray_painting_plugin/config/: moveit.rviz  ros_gz_bridge.yaml
src/gz_sim_spray_painting_plugin/include/gz_sim_spray_painting_plugin/: SprayPaintPlugin.hh
src/gz_sim_spray_painting_plugin/launch/: demo.launch.py
src/gz_sim_spray_painting_plugin/src/: SprayPaintPlugin.cc
src/gz_spray_painting_plugin_demo/: package.xml
src/gz_spray_painting_plugin_demo/config/: moveit.rviz
src/gz_spray_painting_plugin_demo/launch/: demo.launch.py  ur_spray_demo.launch.py
src/gz_spray_painting_plugin_demo/meshes/spray_gun/: spray_gun.glb
src/gz_spray_painting_plugin_demo/scripts/: cartesian_path_executor.py  generate_spray_poses.py  spray_painting_demo.py
src/gz_spray_painting_plugin_demo/urdf/: spray_nozzle.urdf  ur_spray_gz.urdf.xacro
src/gz_spray_painting_plugin_demo/worlds/: demo_car.sdf  demo_cube.sdf  demo_cylinder.sdf  demo_ellipsoid.sdf
