<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_sim_spray_painting_plugin</name>
  <version>0.1.0</version>
  <description>Gazebo Sim 8(Harmonic) spray painting simulation plugin</description>
  <maintainer email="kharjun4@gmail.com">topguns837</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Gazebo Harmonic packages are installed from the OSRF APT repository and
       found via find_package() in CMakeLists.txt — no rosdep key is needed. -->
  <depend>libgz-sim8-dev</depend>
  <depend>libgz-transport13-dev</depend>
  <depend>libgz-msgs10-dev</depend>
  <depend>libgz-plugin2-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
